src/objects/OrgSettings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Date_Slot_Created_Till__c</fullName>
        <description>Date Slot Created Till</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Slot Created Till</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Minimum_Slot_duration__c</fullName>
        <label>Minimum Slot duration</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Slot_Created_From__c</fullName>
        <description>Slot Created From</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Slot Created From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Time_Slot_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Time Slot Created</description>
        <label>Time Slot Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <description>Year</description>
        <label>Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Org Settings</label>
</CustomObject>